Release 3.0.5: fix dashboard layout issue

--- a/app/src/style/dancerm.styl
+++ b/app/src/style/dancerm.styl
@@ -465,7 +465,7 @@ body
     display flex
     flex-wrap wrap
     flex-direction column
-    height 100%
+    height 100vh
     overflow hidden
     
     > article
@@ -478,7 +478,7 @@ body
         text-align center
 
     .big-value
-      font-size 120px
+      font-size 100px
       font-family impactFont
       color planningColors[0]
 
